@@ -1,3 +1,10 @@
+2008-10-29  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.Ide.Gui/TextEditor.cs:
+	* MonoDevelop.Ide.Gui.Content/CompletionTextEditorExtension.cs: Fixed
+	'Bug 436669 - function hints (tooltip) hides typing when typing a
+	multi-line function'.
+
 2008-10-28  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* MonoDevelop.Ide.Commands/DebugCommands.cs: Fix the build.
